# python-puid

./: Makefile  pyproject.toml
src/puid/: __init__.py  __main__.py  bits.py  chars.py  chars_error.py  cli.py  encoder.py  entropy.py  ordered_set.py  puid.py
src/puid/encoders/: custom.py  symbol.py
tests/: bits_test.py  chars_test.py  conftest.py  encoder_test.py  entropy_test.py  histogram.py  puid_test.py
