[tool.poetry]
name = "puid"
version = "0.1.0"
description = "my take on dingosky's Simple, flexible and efficient generation of probably unique identifiers (`puid`, AKA random strings) of intuitively specified entropy using pre-defined or custom characters, including unicode"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
funparse = {version = "^0.4.0", optional = true}
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
scipy = "^1.11.4"
mypy = "^1.8.0"

[tool.poetry.extras]
cli = ["funparse"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://github.com/python-lsp/pylsp-mypy
[tool.pylsp-mypy]
enabled = true
live_mode = true
dmypy = false
strict = false

# https://docs.astral.sh/ruff/settings
# https://docs.astral.sh/ruff/configuration
[tool.ruff]
# builtins = ["print_err"]
line-length = 120

[tool.ruff.lint]
ignore = ["E731"]

# https://github.com/google/yapf
[tool.yapf]
based_on_style = 'google'
coalesce_brackets = true
column_limit = 100
# continuation_align_style = "fixed"
continuation_align_style = "valign-right"
# continuation_align_style = "space"
dedent_closing_brackets = false
indent_closing_brackets = false
join_multiple_lines = false
spaces_before_comment = 3
split_arguments_when_comma_terminated = true
split_penalty_after_unary_operator = 9999999
